@@ -6,6 +6,7 @@
 - Added XmlReader.getChildren() and XmlReader.replaceChild()
 - LWJGL3: Fix pauseWhenLostFocus not working as expected
 - API Addition: Added FPSLogger#setBound
+- Fix: DelaunayTriangulator failing on some inputs.
 
 [1.13.0]
 - [BREAKING CHANGE] GWT: Updated to 2.11.0. `com.google.jsinterop:jsinterop-annotations:2.0.2:sources` must be added as a dependency to your html project dependencies.
